<resources>
    <string name="app_name">119</string>
    <string name="splash_bottom_text">HUMANITY TO HUMANITY</string>
    <string name="sign_up_header_text">Sign Up</string>
    <string name="full_name_text">Full name</string>
    <string name="email_text">Email</string>
    <string name="full_name_hint">John Doe</string>
    <string name="email_hint">example@gmail.com</string>
    <string name="password_text">Password</string>
    <string name="password_hint">••••••••</string>
    <string name="sign_up_btn_text">SIGN UP</string>
    <string name="sign_up_bottom_text">Already have an account?</string>
    <string name="sign_up_bottom_link">Login</string>
    <string name="login_header_text">Login</string>
    <string name="login_email_text">Email</string>
    <string name="login_email_hint">Your email or phone</string>
    <string name="log_in_forgot_text">Forgot password?</string>
    <string name="log_in_bottom_text">Don\'t have an account?</string>
    <string name="log_in_bottom_link">Sign Up</string>
    <string name="login_btn_text">LOGIN</string>
    <string name="back_btn_text">Back</string>
    <string name="reset_password_header">Reset Password</string>
    <string name="reset_password_text">Please enter your email address to request a password reset</string>
    <string name="reset_password_hint">example@gmail.com</string>
    <string name="send_new_password_btn_text">SEND NEW PASSWORD</string>
    <string name="home_main_header">Stay Safe\n119 Fast!</string>
    <string name="icon_fire_text">Fire emergency</string>
    <string name="icon_medical_text">Medical help</string>
    <string name="icon_ambulance_text">Ambulance 119</string>
    <string name="icon_medicine_text">medicine alert</string>
    <string name="icon_safety_text">Stay safe</string>
    <string name="status_bar_text">ACTIVE REPORTS</string>
    <string name="all_reports_count">15,346+</string>
    <string name="sos_btn_text">SOS</string>

    <string name="mapbox_access_token">
pk.eyJ1IjoibGFreTIwMDMiLCJhIjoiY21sbmdpdXE4MHNsdDNlcHVkb2FtYWQ0ZiJ9.Nj48QIGZ9wSy8Zuw7NEUjQ
</string>
    <string name="header_subscription_text">Subscription</string>
    <string name="subsctiption_package_name">Annual Safety Membership</string>
    <string name="subsctiption_tag_line">Complete Emergency Protection for 1 Year</string>
    <string name="subscription_price">$20</string>
    <string name="subscription_year">/ per year</string>
    <string name="subscription_get_started_btn">Get Started</string>
    <string name="subscription_features_text">Features</string>
    <string name="subscription_features_01">Unlimited SOS Alerts</string>
    <string name="subscription_features_02">Live GPS Location Sharing</string>
    <string name="subscription_features_03">Multimedia Evidence Upload</string>
    <string name="subscription_features_04">Real-time Status Updates</string>
    <string name="subscription_features_05">24/7 Priority Support</string>
    <string name="subscription_features_06">Secure Medical Profile</string>
    <string name="no_internet_connection_text">No Internet Connection</string>
    <string name="enable_notifications_text">Enable Notifications</string>
    <string name="enavle_notification_small_text">Stay updated with important alerts,\nmessages, and service updates.</string>
    <string name="no_internet_connection_small_text">Please check your internet connection\nor try again later.</string>
    <string name="allow_notifications_btn_text">Allow Notifications</string>
    <string name="refresh_btn_text">Refresh</string>


</resources>