<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".activity.SubscribtionActivity">


    <View
        android:id="@+id/circle_181"
        android:layout_width="181dp"
        android:layout_height="181dp"
        android:background="@drawable/circle_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="-90dp"
        android:layout_marginTop="-109dp" />

    <View
        android:id="@+id/circle_165"
        android:layout_width="165dp"
        android:layout_height="165dp"
        android:background="@drawable/circle_background"
        android:alpha="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="-99dp" />

    <View
        android:id="@+id/circle_96"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:background="@drawable/circle_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="-48dp"
        android:layout_marginTop="-19dp" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/header_subscription_text"
        android:textColor="#111719"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="46dp">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/logo_119_red" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/subsctiption_package_name"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/subsctiption_tag_line"
                android:textColor="#4B4B4B"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="bottom"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/subscription_price"
                    android:textColor="#000000"
                    android:textSize="48sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/subscription_year"
                    android:textColor="#80000000"
                    android:textSize="14sp" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_activate"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/btn_outline_rounded"
                android:text="@string/subscription_get_started_btn"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/subscription_features_text"
                android:textColor="#000000"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <LinearLayout style="@style/FeatureRow">
                    <ImageView style="@style/FeatureIcon" />
                    <TextView style="@style/FeatureText" android:text="@string/subscription_features_01" />
                </LinearLayout>

                <LinearLayout style="@style/FeatureRow">
                    <ImageView style="@style/FeatureIcon" />
                    <TextView style="@style/FeatureText" android:text="@string/subscription_features_02" />
                </LinearLayout>

                <LinearLayout style="@style/FeatureRow">
                    <ImageView style="@style/FeatureIcon" />
                    <TextView style="@style/FeatureText" android:text="@string/subscription_features_03" />
                </LinearLayout>

                <LinearLayout style="@style/FeatureRow">
                    <ImageView style="@style/FeatureIcon" />
                    <TextView style="@style/FeatureText" android:text="@string/subscription_features_04" />
                </LinearLayout>

                <LinearLayout style="@style/FeatureRow">
                    <ImageView style="@style/FeatureIcon" />
                    <TextView style="@style/FeatureText" android:text="@string/subscription_features_05" />
                </LinearLayout>

                <LinearLayout style="@style/FeatureRow">
                    <ImageView style="@style/FeatureIcon" />
                    <TextView style="@style/FeatureText" android:text="@string/subscription_features_06" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>