<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:clipChildren="false"
    tools:context=".activity.ForgotPasswordActivity">



    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/back_button_bg"
        android:src="@drawable/back_arrow"
        android:scaleType="centerInside"

        android:backgroundTint="@null"
        android:stateListAnimator="@null"
        android:elevation="4dp"

        android:contentDescription="@string/back_btn_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <View
        android:id="@+id/circle_181"
        android:layout_width="181dp"
        android:layout_height="181dp"
        android:background="@drawable/circle_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="-90dp"
        android:layout_marginTop="-109dp" />

    <View
        android:id="@+id/circle_165"
        android:layout_width="165dp"
        android:layout_height="165dp"
        android:background="@drawable/circle_background"
        android:alpha="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="-99dp" />

    <View
        android:id="@+id/circle_96"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:background="@drawable/circle_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="-48dp"
        android:layout_marginTop="-19dp" />


    <TextView
        android:id="@+id/titleReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/reset_password_header"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/btnBack"
        app:layout_constraintTop_toBottomOf="@+id/btnBack" />

    <TextView
        android:id="@+id/descriptionReset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:text="@string/reset_password_text"
        android:textColor="#8E8E8E"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/titleReset"
        app:layout_constraintTop_toBottomOf="@+id/titleReset" />

    <EditText
        android:id="@+id/etResetEmail"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/reset_password_hint"
        android:textColorHint="#BDBDBD"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="20dp"
        android:textColor="@color/mainBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/descriptionReset"
        app:layout_constraintTop_toBottomOf="@+id/descriptionReset" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSendReset"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/button_bg"
        android:text="@string/send_new_password_btn_text"
        android:textColor="#FFFFFF"
        android:backgroundTint="@null"
        android:stateListAnimator="@null"
        android:foreground="@null"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/etResetEmail"
        app:layout_constraintStart_toStartOf="@+id/etResetEmail"
        app:layout_constraintTop_toBottomOf="@+id/etResetEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>