<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBF6F8">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topCardArea"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/top_card_gradient_bg"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/notificationContainer"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/circle_shape_light"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:src="@drawable/notification_icon" />

            <View
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_gravity="top|end"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/red_dot" />
        </FrameLayout>

        <TextView
            android:id="@+id/mainHeadingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_main_header"
            android:textColor="#FFFFFF"
            android:textSize="32sp"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.55" />

        <ImageView
            android:id="@+id/icon_fire"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_fire_emergency"
            android:background="@drawable/circle_background_orange"
            android:padding="12dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp" />

        <ImageView
            android:id="@+id/icon_medical"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="84dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/circle_background_red"
            android:padding="12dp"
            android:src="@drawable/ic_first_aid_kit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/icon_fire" />

        <ImageView
            android:id="@+id/icon_ambulance"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginStart="228dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/circle_background_blue"
            android:padding="12dp"
            android:src="@drawable/ic_ambulance"
            app:layout_constraintBottom_toTopOf="@id/mainHeadingText"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/statsBar"
        android:layout_width="336dp"
        android:layout_height="65dp"
        android:background="@drawable/stats_bar_bg"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/topCardArea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topCardArea">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/status_bar_text"
            android:textColor="#201C21"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvAllReportsCount"
            android:layout_width="110dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_bg"
            android:backgroundTint="#03CFB7"
            android:gravity="center"
            android:text="@string/all_reports_count"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/doodle_main_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statsBar">

        <View
            android:id="@+id/pulseView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/sos_button_bg"
            android:alpha="0.5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sosButton"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:background="@drawable/circle_ripple"
            android:clickable="true"
            android:focusable="true"
            android:elevation="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/sosIcon"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_marginTop="60dp"
                android:src="@drawable/ic_sos_wifi"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sos_btn_text"
                android:textColor="#FFFFFF"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sosIcon"
                android:layout_marginBottom="55dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>